@@ -14,7 +14,7 @@
 #undef APSTUDIO_READONLY_SYMBOLS
 
 /////////////////////////////////////////////////////////////////////////////
-// English (United States) resources
+// Englisch (USA) resources
 
 #if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_ENU)
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
@@ -1847,7 +1847,7 @@ BEGIN
     EDITTEXT        IDC_COLLISION_REDUCTION_FACTOR,78,114,40,12,ES_AUTOHSCROLL
 END
 
-IDD_PROPRUBBER_PHYSICS DIALOGEX 0, 0, 125, 85
+IDD_PROPRUBBER_PHYSICS DIALOGEX 0, 0, 125, 94
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1859,8 +1859,10 @@ BEGIN
     LTEXT           "Elasticity Falloff",IDC_STATIC,7,19,63,8
     LTEXT           "&Friction",IDC_STATIC,7,32,63,8
     LTEXT           "&Scatter Angle",IDC_STATIC,7,45,63,8
-    CONTROL         "Collidable",111,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,57,111,10
-    CONTROL         "Has &Hit Event",3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,69,60,10
+    CONTROL         "Collidable",111,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,70,111,10
+    CONTROL         "Has &Hit Event",3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,82,60,10
+    EDITTEXT        116,78,56,40,12,ES_AUTOHSCROLL
+    LTEXT           "Hit Height",IDC_STATIC,7,58,63,8
 END
 
 IDD_PROPRUBBER_POSITION DIALOGEX 0, 0, 125, 124
@@ -2192,6 +2194,10 @@ BEGIN
     BEGIN
     END
 
+    IDD_PROPWALL_PHYSICS, DIALOG
+    BEGIN
+    END
+
     IDD_PROPGATE_VISUALS, DIALOG
     BEGIN
         BOTTOMMARGIN, 88
@@ -2296,6 +2302,11 @@ BEGIN
 
     IDD_PROPFLASHER_POSITION, DIALOG
     BEGIN
+    END
+
+    IDD_PROPRUBBER_PHYSICS, DIALOG
+    BEGIN
+        BOTTOMMARGIN, 92
     END
 
     IDD_PROPRUBBER_POSITION, DIALOG
@@ -2889,7 +2900,7 @@ BEGIN
     IDS_DRAWINBACK          "Draw In &Back"
     IDS_SAVEERROR           "There was an error saving the file."
     IDS_TB_BACKGLASS        "Backdrop"
-    IDS_WRONGFILEVERSION    "Visual Pinball can not load a file of that version."
+    IDS_WRONGFILEVERSION    "This table was saved by a new version of Visual Pinball. It's possible that it won't work well!"
     IDS_NOPASTEINVIEW       "One or more of the objects on the clipboard can not be placed into the current view."
     IDS_FINDLOOPED          "Passed the end of the file"
     IDS_FINDFAILED          "Cannot find the string '"
@@ -2922,7 +2933,7 @@ BEGIN
     IDS_STEP                "Step"
 END
 
-#endif    // English (United States) resources
+#endif    // Englisch (USA) resources
 /////////////////////////////////////////////////////////////////////////////
 
 
